boardPageState.mountBoardDetail : unmount BoardDetail to prevent flickering, needSaveText.current = true for enable...EditorToModify : making sure to save text when unintentionallly unmounting

--- a/src/components/main/panels/board/remirror/all.css
+++ b/src/components/main/panels/board/remirror/all.css
@@ -197,7 +197,7 @@ input[type='radio'] + .remirror-form-label {
 
 .remirror-menu-pane-active {
   color: var(--rmr-color-primary-text);
-  background-color: yellow;
+  background-color: var(--rmr-color-primary);
 }
 
 .remirror-menu-dropdown-label {
